Change font to woff so that INternet Explorer could see the font. The true type file I used had a permission set that I could not change.

--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ div.panel-wrapper > div {
 
 @font-face {
   font-family: 'Dotline'; /* http://www.fontspace.com/honey-and-death/dotline */
-  src: url('DOTLRG__.TTF')  format('truetype')
+  /* src: url('DOTLRG__.TTF')  format('truetype') */
+  src: url('DOTLRG__copy.woff') format('woff'); /* Had to convert to woff, because the true type had an embeddability permission that I wasn't able to change. This only affected Internet Explorer.' */
 }
 .dotted-font {
   font-family: 'Dotline', Fallback, sans-serif;
